--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "socket.io-client-cpp"]
 	path = src/engine/external/socket.io-client-cpp
 	url = https://github.com/socketio/socket.io-client-cpp.git
+	shallow = true
 [submodule "ddnet-libs"]
 	path = ddnet-libs
 	url = https://github.com/ddnet/ddnet-libs
+	shallow = true
